# pyrtlnet

./: litert_inference.py  numpy_inference.py  pyproject.toml  pyrtl_inference.py
fpga/: fpga_inference.py
pyrtlnet/: inference_util.py
